--- a/source/_patterns/04-pages/03-hankesivu-edit-mode.mustache
+++ b/source/_patterns/04-pages/03-hankesivu-edit-mode.mustache
@@ -5,16 +5,14 @@
     <div class="hanke-img-container">
       <img src="../../images/fpo_16x9.png" alt="Taustakuva" class="hanke-bg" />
       <div class="edit-bg icon-container">
-        <span>
-          <input type="submit" value="Vaihda taustakuva" />
-        </span>
+          <label for="upload-background-image" class="upload-file-button">Vaihda taustakuva</label>
+          <input type="file" id="upload-background-image" />
       </div>
       <div class="logo-container">
         <img src="../../images/fpo_avatar.png" alt="Logo" class="hanke-logo" />
         <div class="edit-logo icon-container">
-          <span>
-            <input type="submit" value="Vaihda logo" />
-          </span>
+            <label for="upload-logo-image" class="upload-file-button">Vaihda logo</label>
+            <input type="file" id="upload-logo-image" />
         </div>
       </div>
     </div>
@@ -189,22 +187,33 @@
           <a href="#">Näytä valinnaiset lisätiedot</a>
         </p>
       </div>
-      <div id="hanke-save" class="content-item large center">
-        <div>
-          <span>
-            Olen tutustunut <a href="#">palvelun sääntöihin</a> ja vakuutan annettujen tietojen olevan todenmukaisia*
-          </span>
-          <ul id="rblAcceptTerms" class="btn-group">
-            <li>
-              <input id="rblIDontAcceptTerms" type="radio" name="group2" value="0" checked="" />
-              <label for="rblIDontAcceptTerms">En hyväksy ehtoja</label>
+      <div id="hanke-save" class="content-item large save">
+        <div class="terms">
+          Olen tutustunut <a href="#">palvelun sääntöihin</a> ja vakuutan annettujen tietojen olevan todenmukaisia*
+        </div>
+        <div class="process-actions">
+          <ul>
+            <li class="action-item">
+              <a class="btn prev" rel="prev" href="">
+                <i class="icon-arrow-back"></i>Peruuta
+              </a>
             </li>
-            <li>
-              <input id="rblTermsAccepted" type="radio" name="group2" value="1" />
-              <label for="rblTermsAccepted">Hyväksyn ehdot</label>
+            <li class="action-item middle-section">
+              <ul id="rblAcceptTerms" class="btn-group">
+                <li>
+                  <input id="rblIDontAcceptTerms" type="radio" name="group2" value="0" checked="" />
+                  <label for="rblIDontAcceptTerms">En hyväksy ehtoja</label>
+                </li>
+                <li>
+                  <input id="rblTermsAccepted" type="radio" name="group2" value="1" />
+                  <label for="rblTermsAccepted">Hyväksyn ehdot</label>
+                </li>
+              </ul>
+            </li>
+            <li class="action-item">              
+              <input id="btnSaveHanke" type="submit" class="btn" value="Tallenna muutokset" disabled="" />
             </li>
           </ul>
-          <input id="btnSaveHanke" type="submit" class="btn" value="Tallenna muutokset" disabled="" />
         </div>
       </div>
     </div>
