--- a/source/css/scss/base/_forms.scss
+++ b/source/css/scss/base/_forms.scss
@@ -453,22 +453,21 @@ input[type="search"]::-webkit-search-decoration {
 	.icon-container {
 		background-color: #f0f0f0;
 		
-		input[type="submit"] {
-			background-color: transparent;
-			padding-left: 2em;
-			border: 0;
-		}
-
-		span {
-			position: relative;
-		}
-
-		span:before {
-			@extend .om-pencil;
-			font-size: 24px;
+		input[type="file"] {
 			position: absolute;
-			left: 0.5em;
-			top: 0;
+			left: -9999px;
+		}
+		
+		.upload-file-button{
+			cursor: pointer;
+			padding: 0.25em 0.25em 0.25em 2em;
+			&:before{
+				@extend .om-pencil;
+				font-size: 24px;
+				position: absolute;
+				left: 0.3em;
+				top: 0.1em;
+			}
 		}
 	}
 
@@ -480,26 +479,10 @@ input[type="search"]::-webkit-search-decoration {
 			}
 		}
 	}
-
-	.center {
+	.save {
+		text-align: center;
 		div {
-			margin: 0 auto;
-			padding: 1em 1em;
-			width: 50%;		
-		}
-		.span {
-			height: 2em;
-			text-align: center;
-		}
-		ul {
-			width: 21em;
-			margin: 0 auto;
-			margin-top: 1em;
-		}
-		input[type="submit"] {
-			display: block;
-			margin-top: 1em;
-			width: 100%;
+			padding-bottom: 2em;
 		}
 	}
 }
