--- a/public/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.mustache
+++ b/public/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.mustache
@@ -5,16 +5,14 @@
     &lt;div class=&quot;hanke-img-container&quot;&gt;
       &lt;img src=&quot;../../images/fpo_16x9.png&quot; alt=&quot;Taustakuva&quot; class=&quot;hanke-bg&quot; /&gt;
       &lt;div class=&quot;edit-bg icon-container&quot;&gt;
-        &lt;span&gt;
-          &lt;input type=&quot;submit&quot; value=&quot;Vaihda taustakuva&quot; /&gt;
-        &lt;/span&gt;
+          &lt;label for=&quot;upload-background-image&quot; class=&quot;upload-file-button&quot;&gt;Vaihda taustakuva&lt;/label&gt;
+          &lt;input type=&quot;file&quot; id=&quot;upload-background-image&quot; /&gt;
       &lt;/div&gt;
       &lt;div class=&quot;logo-container&quot;&gt;
         &lt;img src=&quot;../../images/fpo_avatar.png&quot; alt=&quot;Logo&quot; class=&quot;hanke-logo&quot; /&gt;
         &lt;div class=&quot;edit-logo icon-container&quot;&gt;
-          &lt;span&gt;
-            &lt;input type=&quot;submit&quot; value=&quot;Vaihda logo&quot; /&gt;
-          &lt;/span&gt;
+            &lt;label for=&quot;upload-logo-image&quot; class=&quot;upload-file-button&quot;&gt;Vaihda logo&lt;/label&gt;
+            &lt;input type=&quot;file&quot; id=&quot;upload-logo-image&quot; /&gt;
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
@@ -189,22 +187,33 @@
           &lt;a href=&quot;#&quot;&gt;N&Atilde;&curren;yt&Atilde;&curren; valinnaiset lis&Atilde;&curren;tiedot&lt;/a&gt;
         &lt;/p&gt;
       &lt;/div&gt;
-      &lt;div id=&quot;hanke-save&quot; class=&quot;content-item large center&quot;&gt;
-        &lt;div&gt;
-          &lt;span&gt;
-            Olen tutustunut &lt;a href=&quot;#&quot;&gt;palvelun s&Atilde;&curren;&Atilde;&curren;nt&Atilde;&para;ihin&lt;/a&gt; ja vakuutan annettujen tietojen olevan todenmukaisia*
-          &lt;/span&gt;
-          &lt;ul id=&quot;rblAcceptTerms&quot; class=&quot;btn-group&quot;&gt;
-            &lt;li&gt;
-              &lt;input id=&quot;rblIDontAcceptTerms&quot; type=&quot;radio&quot; name=&quot;group2&quot; value=&quot;0&quot; checked=&quot;&quot; /&gt;
-              &lt;label for=&quot;rblIDontAcceptTerms&quot;&gt;En hyv&Atilde;&curren;ksy ehtoja&lt;/label&gt;
+      &lt;div id=&quot;hanke-save&quot; class=&quot;content-item large save&quot;&gt;
+        &lt;div class=&quot;terms&quot;&gt;
+          Olen tutustunut &lt;a href=&quot;#&quot;&gt;palvelun s&Atilde;&curren;&Atilde;&curren;nt&Atilde;&para;ihin&lt;/a&gt; ja vakuutan annettujen tietojen olevan todenmukaisia*
+        &lt;/div&gt;
+        &lt;div class=&quot;process-actions&quot;&gt;
+          &lt;ul&gt;
+            &lt;li class=&quot;action-item&quot;&gt;
+              &lt;a class=&quot;btn prev&quot; rel=&quot;prev&quot; href=&quot;&quot;&gt;
+                &lt;i class=&quot;icon-arrow-back&quot;&gt;&lt;/i&gt;Peruuta
+              &lt;/a&gt;
             &lt;/li&gt;
-            &lt;li&gt;
-              &lt;input id=&quot;rblTermsAccepted&quot; type=&quot;radio&quot; name=&quot;group2&quot; value=&quot;1&quot; /&gt;
-              &lt;label for=&quot;rblTermsAccepted&quot;&gt;Hyv&Atilde;&curren;ksyn ehdot&lt;/label&gt;
+            &lt;li class=&quot;action-item middle-section&quot;&gt;
+              &lt;ul id=&quot;rblAcceptTerms&quot; class=&quot;btn-group&quot;&gt;
+                &lt;li&gt;
+                  &lt;input id=&quot;rblIDontAcceptTerms&quot; type=&quot;radio&quot; name=&quot;group2&quot; value=&quot;0&quot; checked=&quot;&quot; /&gt;
+                  &lt;label for=&quot;rblIDontAcceptTerms&quot;&gt;En hyv&Atilde;&curren;ksy ehtoja&lt;/label&gt;
+                &lt;/li&gt;
+                &lt;li&gt;
+                  &lt;input id=&quot;rblTermsAccepted&quot; type=&quot;radio&quot; name=&quot;group2&quot; value=&quot;1&quot; /&gt;
+                  &lt;label for=&quot;rblTermsAccepted&quot;&gt;Hyv&Atilde;&curren;ksyn ehdot&lt;/label&gt;
+                &lt;/li&gt;
+              &lt;/ul&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;action-item&quot;&gt;              
+              &lt;input id=&quot;btnSaveHanke&quot; type=&quot;submit&quot; class=&quot;btn&quot; value=&quot;Tallenna muutokset&quot; disabled=&quot;&quot; /&gt;
             &lt;/li&gt;
           &lt;/ul&gt;
-          &lt;input id=&quot;btnSaveHanke&quot; type=&quot;submit&quot; class=&quot;btn&quot; value=&quot;Tallenna muutokset&quot; disabled=&quot;&quot; /&gt;
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
